# AoC-2023

./: .gitignore  Cargo.toml
aoc_trait/: Cargo.toml
aoc_trait/src/: lib.rs
day_01/: Cargo.toml
day_01/src/: lib.rs  puzzle_2.rs  solution.rs
day_02/: Cargo.toml
day_02/src/: game_list.rs  lib.rs  solution.rs
day_03/: Cargo.toml
day_03/src/: engine_schematic_symbol.rs  lib.rs  solution.rs
day_04/: Cargo.toml
day_04/src/: card.rs  lib.rs
day_05/: Cargo.toml
day_05/src/: lib.rs  seed_location_map.rs  solution.rs
day_06/: Cargo.toml
day_06/src/: lib.rs
day_07/: Cargo.toml
day_07/src/: hand.rs  lib.rs  solution.rs  sort.rs
day_08/: Cargo.toml
day_08/src/: lib.rs  node.rs  solution.rs  state_machine.rs
day_09/: Cargo.toml
day_09/src/: lib.rs  oasis.rs  oasis_old.rs
day_1/: Cargo.toml
day_1/src/: lib.rs  puzzle_1.rs  puzzle_2.rs  solution.rs
day_10/: Cargo.toml
day_10/src/: lib.rs  maze.rs  walker_1.rs  walker_2.rs
day_11/: Cargo.toml
day_11/src/: lib.rs  space_image.rs
day_12/: Cargo.toml
day_12/src/: _record_2.rs  _record_2_no.rs  lib.rs  record_1.rs  record_2.rs
day_13/: Cargo.toml
day_13/src/: lib.rs  mirror_1.rs  mirror_2.rs
day_14/: Cargo.toml
day_14/src/: lib.rs  parabolic_reflector_1.rs  parabolic_reflector_2.rs
day_15/: Cargo.toml
day_15/src/: hash.rs  hashmap.rs  lib.rs
day_16/: Cargo.toml
day_16/src/: lib.rs  (+1 more)
day_2/: Cargo.toml
day_3/: Cargo.toml
day_4/: Cargo.toml
day_5/: Cargo.toml
day_6/: Cargo.toml
run/: Cargo.toml
run/src/: cli.rs  inputs.rs  main.rs
run_trait/: Cargo.toml
(+18 files in other folders)
