[package]
name = "run"
version = "0.1.0"
edition = "2021"

[dependencies]
day_01 = { version = "0.1.0", path = "../day_01" }
day_02 = { version = "0.1.0", path = "../day_02" }
day_03 = { version = "0.1.0", path = "../day_03" }
day_04 = { version = "0.1.0", path = "../day_04" }
day_05 = { version = "0.1.0", path = "../day_05" }
day_06 = { version = "0.1.0", path = "../day_06" }
day_07 = { version = "0.1.0", path = "../day_07" }
day_08 = { version = "0.1.0", path = "../day_08" }
run_trait = { version = "0.1.0", path = "../run_trait" }
