[package]
name = "run"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
day_01 = { version = "0.1.0", path = "../day_01" }
day_02 = { version = "0.1.0", path = "../day_02" }
day_03 = { version = "0.1.0", path = "../day_03" }
day_04 = { version = "0.1.0", path = "../day_04" }
day_05 = { version = "0.1.0", path = "../day_05" }
day_06 = { version = "0.1.0", path = "../day_06" }
day_07 = { version = "0.1.0", path = "../day_07" }
day_08 = { version = "0.1.0", path = "../day_08" }
day_09 = { version = "0.1.0", path = "../day_09" }
aoc_trait = { version = "0.1.0", path = "../aoc_trait" }
day_10 = { version = "0.1.0", path = "../day_10" }
day_11 = { version = "0.1.0", path = "../day_11" }
day_13 = { version = "0.1.0", path = "../day_13" }
